<?xml version="1.0"?>
<package format="2">
  <name>orb_slam3_ros</name>
  <version>0.0.1</version>
  <description>orb_slam3_ros</description>

  <maintainer email="xuchunbobo520@gmail.com">Xu Bobo</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>